// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphvizWasmAdapter: > computedAmazonView 1`] = `
{
  "__": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "bounds": {
    "height": 281,
    "width": 937,
    "x": 0,
    "y": 0,
  },
  "customColorDefinitions": {},
  "description": null,
  "edges": [
    {
      "dotpos": "s,359.66,151.2 e,577.02,151.2 370.61,151.2 433.22,151.2 504.06,151.2 566.65,151.2",
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 105,
        "x": 416,
        "y": 125,
      },
      "parent": null,
      "points": [
        [
          371,
          151,
        ],
        [
          433,
          151,
        ],
        [
          504,
          151,
        ],
        [
          567,
          151,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "target": "amazon.s3",
    },
  ],
  "hash": "0e855f58163143eb9c45ac79127b7f60de4c5843",
  "id": "amazon",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 265,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 43,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": null,
      "position": [
        8,
        8,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 384,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labelBBox": {
        "height": 23,
        "width": 78,
        "x": 121,
        "y": 75,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": "cloud",
      "position": [
        40,
        61,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 320,
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "depth": 1,
      "description": "Amazon is a cloud provider",
      "height": 265,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 52,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [],
      "parent": null,
      "position": [
        545,
        8,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 384,
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "height": 180,
      "id": "amazon.s3",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 46,
        "width": 156,
        "x": 82,
        "y": 64,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [],
      "parent": "amazon",
      "position": [
        577,
        61,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "S3",
      "width": 320,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "amazon",
}
`;

exports[`GraphvizWasmAdapter: > computedCloud3levels 1`] = `
{
  "__": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "bounds": {
    "height": 949,
    "width": 1391,
    "x": 0,
    "y": 0,
  },
  "customColorDefinitions": {},
  "description": null,
  "edges": [
    {
      "dotpos": "e,233,332.26 233,179.87 233,223.7 233,276.72 233,321.86",
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labelBBox": {
        "height": 18,
        "width": 111,
        "x": 234,
        "y": 240,
      },
      "parent": null,
      "points": [
        [
          233,
          180,
        ],
        [
          233,
          224,
        ],
        [
          233,
          277,
        ],
        [
          233,
          322,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "dotpos": "e,675,332.26 675,179.87 675,223.7 675,276.72 675,321.86",
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labelBBox": {
        "height": 18,
        "width": 62,
        "x": 676,
        "y": 240,
      },
      "parent": null,
      "points": [
        [
          675,
          180,
        ],
        [
          675,
          224,
        ],
        [
          675,
          277,
        ],
        [
          675,
          322,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "dotpos": "e,358.98,680.87 566.1,511.86 505.14,561.61 429.1,623.65 366.89,674.42",
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with 
sso authentification",
      "labelBBox": {
        "height": 34,
        "width": 239,
        "x": 489,
        "y": 572,
      },
      "parent": "cloud",
      "points": [
        [
          566,
          512,
        ],
        [
          505,
          562,
        ],
        [
          429,
          624,
        ],
        [
          367,
          674,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "dotpos": "e,245.64,680.87 237.36,511.86 239.73,560.29 242.68,620.37 245.13,670.36",
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labelBBox": {
        "height": 18,
        "width": 80,
        "x": 243,
        "y": 580,
      },
      "parent": "cloud",
      "points": [
        [
          237,
          512,
        ],
        [
          240,
          560,
        ],
        [
          243,
          620,
        ],
        [
          245,
          670,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "dotpos": "s,854.98,770.8 e,1071.4,770.8 865.96,770.8 928.72,770.8 999.07,770.8 1061.1,770.8",
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 105,
        "x": 910,
        "y": 745,
      },
      "parent": null,
      "points": [
        [
          866,
          771,
        ],
        [
          929,
          771,
        ],
        [
          999,
          771,
        ],
        [
          1061,
          771,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "tail": "odiamond",
      "target": "amazon",
    },
    {
      "dotpos": "e,520.97,770.8 411.68,770.8 444.7,770.8 477.71,770.8 510.72,770.8",
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "labelBBox": null,
      "parent": "cloud.backend",
      "points": [
        [
          412,
          771,
        ],
        [
          445,
          771,
        ],
        [
          478,
          771,
        ],
        [
          511,
          771,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
  ],
  "hash": "ef8af4e4460173b1ee693ae331829f9793cbe2ae",
  "id": "cloud3levels",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 23,
        "width": 82,
        "x": 119,
        "y": 75,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "position": [
        73,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 64,
        "width": 255,
        "x": 33,
        "y": 55,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "position": [
        515,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 320,
    },
    {
      "children": [
        "cloud.frontend.dashboard",
        "cloud.frontend.adminPanel",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 2,
      "description": null,
      "height": 670,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 43,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": null,
      "position": [
        8,
        271,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 926,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "height": 180,
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 64,
        "width": 284,
        "x": 26,
        "y": 55,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        65,
        332,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Customer Dashboard Webapp",
      "width": 336,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "height": 180,
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 64,
        "width": 275,
        "x": 27,
        "y": 55,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        511,
        332,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Admin Panel Webapp",
      "width": 327,
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 281,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 15,
        "width": 59,
        "x": 6,
        "y": 0,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud",
      "position": [
        48,
        620,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 846,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "height": 180,
      "id": "cloud.backend.graphql",
      "inEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 64,
        "width": 272,
        "x": 26,
        "y": 55,
      },
      "level": 2,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "parent": "cloud.backend",
      "position": [
        88,
        681,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Graphql API",
      "width": 323,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "height": 180,
      "id": "cloud.backend.storage",
      "inEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 64,
        "width": 280,
        "x": 26,
        "y": 55,
      },
      "level": 2,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud.backend",
      "position": [
        522,
        681,
      ],
      "shape": "storage",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend Storage",
      "width": 332,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud.backend.storage:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 46,
        "width": 185,
        "x": 68,
        "y": 64,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [],
      "parent": null,
      "position": [
        1071,
        681,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 320,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
}
`;

exports[`GraphvizWasmAdapter: > computedCloudView 1`] = `
{
  "__": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "bounds": {
    "height": 560,
    "width": 1529,
    "x": 0,
    "y": 0,
  },
  "customColorDefinitions": {},
  "description": null,
  "edges": [
    {
      "dotpos": "e,317.2,332.26 217.92,179.87 246.84,224.26 281.89,278.06 311.54,323.57",
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labelBBox": {
        "height": 18,
        "width": 111,
        "x": 269,
        "y": 240,
      },
      "parent": null,
      "points": [
        [
          218,
          180,
        ],
        [
          247,
          224,
        ],
        [
          282,
          278,
        ],
        [
          312,
          324,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "dotpos": "e,432.84,332.26 532.12,179.87 503.2,224.26 468.15,278.06 438.5,323.57",
      "id": "support:cloud.frontend",
      "label": "manages",
      "labelBBox": {
        "height": 18,
        "width": 62,
        "x": 490,
        "y": 240,
      },
      "parent": null,
      "points": [
        [
          532,
          180,
        ],
        [
          503,
          224,
        ],
        [
          468,
          278,
        ],
        [
          439,
          324,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "dotpos": "e,672.27,422 534.86,422 575.91,422 620.22,422 661.77,422",
      "id": "cloud.frontend:cloud.backend",
      "label": "[...]",
      "labelBBox": {
        "height": 18,
        "width": 25,
        "x": 591,
        "y": 395,
      },
      "parent": "cloud",
      "points": [
        [
          535,
          422,
        ],
        [
          576,
          422,
        ],
        [
          620,
          422,
        ],
        [
          662,
          422,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "dotpos": "s,991.68,422 e,1209,422 1002.6,422 1065.2,422 1136.1,422 1198.7,422",
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 105,
        "x": 1048,
        "y": 396,
      },
      "parent": null,
      "points": [
        [
          1003,
          422,
        ],
        [
          1065,
          422,
        ],
        [
          1136,
          422,
        ],
        [
          1199,
          422,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "target": "amazon",
    },
  ],
  "hash": "ce579a71c5b48307612e44e36ab91b7b06a3a6f3",
  "id": "cloudView",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 23,
        "width": 82,
        "x": 119,
        "y": 75,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 64,
        "width": 255,
        "x": 33,
        "y": 55,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "position": [
        430,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 320,
    },
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 281,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend",
        "support:cloud.frontend",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 43,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": null,
      "position": [
        175,
        271,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 857,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud.frontend",
      "inEdges": [
        "customer:cloud.frontend",
        "support:cloud.frontend",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 23,
        "width": 80,
        "x": 120,
        "y": 75,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "position": [
        215,
        332,
      ],
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Frontend",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 23,
        "width": 78,
        "x": 121,
        "y": 75,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "position": [
        672,
        332,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 46,
        "width": 185,
        "x": 68,
        "y": 64,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [],
      "parent": null,
      "position": [
        1209,
        332,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 320,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
}
`;

exports[`GraphvizWasmAdapter: > computedIndexView 1`] = `
{
  "__": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "bounds": {
    "height": 503,
    "width": 1072,
    "x": 0,
    "y": 0,
  },
  "customColorDefinitions": {},
  "description": null,
  "edges": [
    {
      "dotpos": "s,534.68,412.8 e,752.04,412.8 545.63,412.8 608.24,412.8 679.08,412.8 741.67,412.8",
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 105,
        "x": 591,
        "y": 387,
      },
      "parent": null,
      "points": [
        [
          546,
          413,
        ],
        [
          608,
          413,
        ],
        [
          679,
          413,
        ],
        [
          742,
          413,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "tail": "odiamond",
      "target": "amazon",
    },
    {
      "dotpos": "e,315.49,322.97 219.62,179.93 247.59,221.66 280.98,271.49 309.64,314.24",
      "id": "customer:cloud",
      "label": "opens in browser",
      "labelBBox": {
        "height": 18,
        "width": 111,
        "x": 275,
        "y": 240,
      },
      "parent": null,
      "points": [
        [
          220,
          180,
        ],
        [
          248,
          222,
        ],
        [
          281,
          271,
        ],
        [
          310,
          314,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "dotpos": "e,434.55,322.97 530.42,179.93 502.45,221.66 469.06,271.49 440.4,314.24",
      "id": "support:cloud",
      "label": "manages",
      "labelBBox": {
        "height": 18,
        "width": 62,
        "x": 490,
        "y": 240,
      },
      "parent": null,
      "points": [
        [
          530,
          180,
        ],
        [
          502,
          222,
        ],
        [
          469,
          271,
        ],
        [
          440,
          314,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
  ],
  "hash": "4923fc4c18d9538671bf4a81642d46b9698a2e3d",
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 23,
        "width": 82,
        "x": 119,
        "y": 75,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "customer:cloud",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 64,
        "width": 255,
        "x": 33,
        "y": 55,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "support:cloud",
      ],
      "parent": null,
      "position": [
        430,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud",
      "inEdges": [
        "customer:cloud",
        "support:cloud",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 23,
        "width": 49,
        "x": 135,
        "y": 75,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud:amazon",
      ],
      "parent": null,
      "position": [
        215,
        323,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 46,
        "width": 185,
        "x": 68,
        "y": 64,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [],
      "parent": null,
      "position": [
        752,
        323,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 320,
    },
  ],
  "tags": null,
  "title": "",
}
`;
